[package]
name = "cyber-tect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.3"
hickory-resolver = "0.24.4"
once_cell = "1.20.3"
reqwest = "0.12.12"
shuttle-axum = { version = "0.52.0", default-features = false, features = [
    "axum-0-7",
] }
shuttle-runtime = "0.52.0"
tokio = "1.28.2"
tower-http = { version = "0.5.0", features = ["fs"] }
pin-project-lite = "0.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.5"
tower = "0.4"
hyper-util = { version = "0.1.10", features = ["full"] }
